[project]
name = "reach"
version = "0.1.3"
description = "Request Engine for Attacks, Callbacks & Handling"
authors = [
    {name="TrojanLij"}
] 
readme = {file = "README.txt", content-type = "text/markdown"}

requires-python = ">=3.12"
dependencies = [
    "docker",
    "dnslib",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "httpx",
    "pymysql",
    "rich",
    "typer[all]",
    "websockets",
    "pyfiglet",
]

[project.optional-dependencies]
forge = [
    "pytest"
]
core = [
    "pytest"
]
cli = [
    "pytest"
]

docs = [
    "sphinx"
]

[project.scripts]
reach = "reach.cli.main:main"
