[project]
name = "reach"
version = "0.1.3"
description = "REACH web exploitation framework"
requires-python = ">=3.12"
dependencies = [
    "docker",
    "dnslib",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "httpx",
    "pymysql",
    "rich",
    "typer[all]",
    "websockets",
    "pyfiglet",
]

[project.optional-dependencies]
forge = [
    "pytest"
]
core = [
    "pytest"
]
cli = [
    "pytest"
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
reach = "reach.cli.main:main"
