[project]
name = "reach"
version = "0.1.3.2"
description = "Request Engine for Attacks, Callbacks & Handling"
authors = [
    {name="TrojanLij"}
] 
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"

dependencies = [
    "docker",
    "dnslib",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "httpx",
    "pymysql",
    "rich",
    "typer[all]",
    "websockets",
    "pyfiglet",
]

[project.optional-dependencies]
forge = [
    "pytest"
]
core = [
    "pytest"
]
cli = [
    "pytest"
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
reach = "reach.cli.main:main"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -vv"
markers = [
    "unit: fast isolated tests",
    "integration: tests that touch real components (db/process/network)",
    "e2e: full workflow tests across multiple components",
    "slow: tests that are expected to take longer than typical unit tests",
]
